--- a/config/database.yml
+++ b/config/database.yml
@@ -9,18 +9,23 @@
 # And be sure to use new-style password hashing:
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
+
 default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: chatbot_user
-  password: 12345
+  username: mauriciosg
+  password: password
   socket: /var/run/mysqld/mysqld.sock
   host: localhost
 
 development:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: chatbotec_development
+  username: mauriciosg
+  password: password
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
